lesson05/css/small.css
header {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #305252;
}
.headings {
    flex-direction: column;
    line-height: 1.5;
}
.headings h1 {
    text-align: center;
    color: white;
}
.motto {
    background-color: #305252;
    font-family: 'Montserrat', sans-serif;
    color: #F4F1BB;
}
header img {
    margin: 10px;
    border: 1px solid #305252;
}
nav {
    align-content: center;
    justify-content: center;
    background: linear-gradient(#688E89,#305252);
    font-family: 'Montserrat', sans-serif;
    border:none;
}
nav button {
    padding: .7rem 2%;
    background-color: transparent;
    border:none;
    font-size: 18px;
    color: #F4F1BB;
}
nav button:hover {
    background-color: rgba(0,0,0,0.3);
}
nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
nav ul li a {
    display: block;
    padding: .8rem 2%;
    text-decoration: none;
    color: #F4F1BB;
    border-top:1px solid rgba(0,0,0,0.3);
}
nav ul li.active a{
    background-color: rgba(0,0,0,0.2);
    color:#F4F1BB;
}
nav ul li a:hover {
    background-color: rgba(0,0,0,0.3);
    color:#F4F1BB;
}
nav ul.hide {
    display: none;
}
main {
    max-width: 64rem;
    margin: 0 auto;
}
h1,h2 {
    font-family: 'Bodoni Moda', serif;
}
h3,h4,h5,h6 {
    font-family: 'Montserrat', sans-serif;
}
h2{
    color: #305252;
    margin: 1rem;
}
h3 {
    background: #5d576b;
    color: #E6EBE0;
    margin: 1rem;
    padding: 1rem;
}
.hero_container {
    position: relative;
    max-width: 64rem;
    height: auto;
    margin: 1rem;
}
.hero_ph {
    margin: 0 auto;
    border: 1px solid #E6EBE0;
    width: 100%;
    height: 300px;
}
.weather_summary {
    position: absolute;
    display: block;
    /*grid-template-rows: 20% 15% 15% 15% 15% 15% 5%;
    align-items: stretch;
    justify-items: flex-start;*/
    top: 30px;
    left: 30px;
    background: radial-gradient( rgba(104,142,137,.85), rgba(48,82,82,.90));
    box-shadow: 0 0 30px #305252;
    color:#F4F1BB;
    font-family: "montserrat", sans-serif;
    border: 1px solid #305252;
}
.weather_summary h3 {
    background: linear-gradient(#688E89,#305252);
    margin: 0;
    color: #F4F1BB;
}
.weather_summary p {
    padding-left: 15px;
}
.forecast {
    margin: 0 auto;
    justify-items: center;
    padding: 1rem;
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    width: 100%;
    background-color: #E6EBE0;
}
.forecast h1 {
    grid-row: 1;
    grid-column: 1 / -1;
    color:#5d576b;
    border-bottom: 10px solid #5d576b;
}
.day-forecast {
    grid-row: 2;
    width:fit-content;
    font-size: 15px;
}
.day-forecast h2 {
    font-size: 14px;
}
.day-forecast p {
    font-size: 12px;
}
.news {
    margin: 1rem;
    background-color: white;
    color: #305252;
    padding: 0;
}
.news-container {
    display: flex;
    flex-wrap: wrap-reverse;
    margin: 1rem;
    align-items: center; 
}
.news-container img {
    width: 100%;
    margin: 0px;
}
.news-article {
    align-content: center;
    justify-content: center;   
}
footer {
    max-width: 64rem;
    background: linear-gradient(#688E89,#305252);
    color: #F4F1BB;
    text-align: center;
    margin: 0 auto;
    padding: 1rem;
}
.lmap {
    display: none;
}
footer a {
    color: #F4F1BB;
}
aside {
    color:#305252;
    font-family: 'montserrat', sans-serif;
    font-size: 22px;
    font-weight: bold;
    background:linear-gradient(#ed6a5a,#F4F1BB,#ed6a5a);
    padding: 22px;
    text-align: center;
    justify-self: center;
}
.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

